common/yak/java/freemarker/parser/freemarker_parser.go
// Code generated from ./FreemarkerParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package freemarkerparser // FreemarkerParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/yaklang/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type FreemarkerParser struct {
	*antlr.BaseParser
}

var FreemarkerParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func freemarkerparserParserInit() {
	staticData := &FreemarkerParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "'<#'", "'</#'", "'<@'", "'</@'", "", "", "", "", "", "", "",
		"", "", "", "'if'", "'else'", "'elseif'", "'assign'", "'as'", "'list'",
		"'true'", "'false'", "'include'", "'import'", "'macro'", "'nested'",
		"'return'", "'<'", "'lt'", "'<='", "'lte'", "'gt'", "'>='", "'gte'",
		"", "'}'", "'>'", "'/>'", "", "", "", "", "", "'@'", "'??'", "'?'",
		"'!'", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", "'['", "']'",
		"'=='", "'='", "'!='", "'&&'", "'||'", "'.'", "','", "':'", "';'",
	}
	staticData.SymbolicNames = []string{
		"", "COMMENT", "START_DIRECTIVE_TAG", "END_DIRECTIVE_TAG", "START_USER_DIR_TAG",
		"END_USER_DIR_TAG", "INLINE_EXPR_START", "CONTENT", "DQS_EXIT", "DQS_ESCAPE",
		"DQS_ENTER_EXPR", "DQS_CONTENT", "SQS_EXIT", "SQS_ESCAPE", "SQS_ENTER_EXPR",
		"SQS_CONTENT", "EXPR_IF", "EXPR_ELSE", "EXPR_ELSEIF", "EXPR_ASSIGN",
		"EXPR_AS", "EXPR_LIST", "EXPR_TRUE", "EXPR_FALSE", "EXPR_INCLUDE", "EXPR_IMPORT",
		"EXPR_MACRO", "EXPR_NESTED", "EXPR_RETURN", "EXPR_LT_SYM", "EXPR_LT_STR",
		"EXPR_LTE_SYM", "EXPR_LTE_STR", "EXPR_GT_STR", "EXPR_GTE_SYM", "EXPR_GTE_STR",
		"EXPR_NUM", "EXPR_EXIT_R_BRACE", "EXPR_EXIT_GT", "EXPR_EXIT_DIV_GT",
		"EXPR_WS", "EXPR_COMENT", "EXPR_STRUCT", "EXPR_DOUBLE_STR_START", "EXPR_SINGLE_STR_START",
		"EXPR_AT", "EXPR_DBL_QUESTION", "EXPR_QUESTION", "EXPR_BANG", "EXPR_ADD",
		"EXPR_SUB", "EXPR_MUL", "EXPR_DIV", "EXPR_MOD", "EXPR_L_PAREN", "EXPR_R_PAREN",
		"EXPR_L_SQ_PAREN", "EXPR_R_SQ_PAREN", "EXPR_COMPARE_EQ", "EXPR_EQ",
		"EXPR_COMPARE_NEQ", "EXPR_LOGICAL_AND", "EXPR_LOGICAL_OR", "EXPR_DOT",
		"EXPR_COMMA", "EXPR_COLON", "EXPR_SEMICOLON", "EXPR_SYMBOL",
	}
	staticData.RuleNames = []string{
		"template", "elements", "element", "rawText", "directive", "directiveIf",
		"directiveIfTrueElements", "directiveIfElseIfElements", "directiveIfElseElements",
		"tagExprElseIfs", "directiveAssign", "directiveList", "directiveListBodyElements",
		"directiveListElseElements", "directiveInclude", "directiveImport",
		"directiveMacro", "directiveNested", "directiveReturn", "directiveUser",
		"directiveUserId", "directiveUserParams", "directiveUserLoopParams",
		"tagExpr", "inlineExpr", "string", "expr", "functionParams", "booleanRelationalOperator",
		"struct", "struct_pair", "single_quote_string", "double_quote_string",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// FreemarkerParserInit initializes any static state used to implement FreemarkerParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewFreemarkerParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func FreemarkerParserInit() {
	staticData := &FreemarkerParserParserStaticData
	staticData.once.Do(freemarkerparserParserInit)
}

// NewFreemarkerParser produces a new parser instance for the optional input antlr.TokenStream.
func NewFreemarkerParser(input antlr.TokenStream) *FreemarkerParser {
	FreemarkerParserInit()
	this := new(FreemarkerParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &FreemarkerParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "FreemarkerParser.g4"

	return this
}

// FreemarkerParser tokens.
const (
	FreemarkerParserEOF                   = antlr.TokenEOF
	FreemarkerParserCOMMENT               = 1
	FreemarkerParserSTART_DIRECTIVE_TAG   = 2
	FreemarkerParserEND_DIRECTIVE_TAG     = 3
	FreemarkerParserSTART_USER_DIR_TAG    = 4
	FreemarkerParserEND_USER_DIR_TAG      = 5
	FreemarkerParserINLINE_EXPR_START     = 6
	FreemarkerParserCONTENT               = 7
	FreemarkerParserDQS_EXIT              = 8
	FreemarkerParserDQS_ESCAPE            = 9
	FreemarkerParserDQS_ENTER_EXPR        = 10
	FreemarkerParserDQS_CONTENT           = 11
	FreemarkerParserSQS_EXIT              = 12
	FreemarkerParserSQS_ESCAPE            = 13
	FreemarkerParserSQS_ENTER_EXPR        = 14
	FreemarkerParserSQS_CONTENT           = 15
	FreemarkerParserEXPR_IF               = 16
	FreemarkerParserEXPR_ELSE             = 17
	FreemarkerParserEXPR_ELSEIF           = 18
	FreemarkerParserEXPR_ASSIGN           = 19
	FreemarkerParserEXPR_AS               = 20
	FreemarkerParserEXPR_LIST             = 21
	FreemarkerParserEXPR_TRUE             = 22
	FreemarkerParserEXPR_FALSE            = 23
	FreemarkerParserEXPR_INCLUDE          = 24
	FreemarkerParserEXPR_IMPORT           = 25
	FreemarkerParserEXPR_MACRO            = 26
	FreemarkerParserEXPR_NESTED           = 27
	FreemarkerParserEXPR_RETURN           = 28
	FreemarkerParserEXPR_LT_SYM           = 29
	FreemarkerParserEXPR_LT_STR           = 30
	FreemarkerParserEXPR_LTE_SYM          = 31
	FreemarkerParserEXPR_LTE_STR          = 32
	FreemarkerParserEXPR_GT_STR           = 33
	FreemarkerParserEXPR_GTE_SYM          = 34
	FreemarkerParserEXPR_GTE_STR          = 35
	FreemarkerParserEXPR_NUM              = 36
	FreemarkerParserEXPR_EXIT_R_BRACE     = 37
	FreemarkerParserEXPR_EXIT_GT          = 38
	FreemarkerParserEXPR_EXIT_DIV_GT      = 39
	FreemarkerParserEXPR_WS               = 40
	FreemarkerParserEXPR_COMENT           = 41
	FreemarkerParserEXPR_STRUCT           = 42
	FreemarkerParserEXPR_DOUBLE_STR_START = 43
	FreemarkerParserEXPR_SINGLE_STR_START = 44
	FreemarkerParserEXPR_AT               = 45
	FreemarkerParserEXPR_DBL_QUESTION     = 46
	FreemarkerParserEXPR_QUESTION         = 47
	FreemarkerParserEXPR_BANG             = 48
	FreemarkerParserEXPR_ADD              = 49
	FreemarkerParserEXPR_SUB              = 50
	FreemarkerParserEXPR_MUL              = 51
	FreemarkerParserEXPR_DIV              = 52
	FreemarkerParserEXPR_MOD              = 53
	FreemarkerParserEXPR_L_PAREN          = 54
	FreemarkerParserEXPR_R_PAREN          = 55
	FreemarkerParserEXPR_L_SQ_PAREN       = 56
	FreemarkerParserEXPR_R_SQ_PAREN       = 57
	FreemarkerParserEXPR_COMPARE_EQ       = 58
	FreemarkerParserEXPR_EQ               = 59
	FreemarkerParserEXPR_COMPARE_NEQ      = 60
	FreemarkerParserEXPR_LOGICAL_AND      = 61
	FreemarkerParserEXPR_LOGICAL_OR       = 62
	FreemarkerParserEXPR_DOT              = 63
	FreemarkerParserEXPR_COMMA            = 64
	FreemarkerParserEXPR_COLON            = 65
	FreemarkerParserEXPR_SEMICOLON        = 66
	FreemarkerParserEXPR_SYMBOL           = 67
)

// FreemarkerParser rules.
const (
	FreemarkerParserRULE_template                  = 0
	FreemarkerParserRULE_elements                  = 1
	FreemarkerParserRULE_element                   = 2
	FreemarkerParserRULE_rawText                   = 3
	FreemarkerParserRULE_directive                 = 4
	FreemarkerParserRULE_directiveIf               = 5
	FreemarkerParserRULE_directiveIfTrueElements   = 6
	FreemarkerParserRULE_directiveIfElseIfElements = 7
	FreemarkerParserRULE_directiveIfElseElements   = 8
	FreemarkerParserRULE_tagExprElseIfs            = 9
	FreemarkerParserRULE_directiveAssign           = 10
	FreemarkerParserRULE_directiveList             = 11
	FreemarkerParserRULE_directiveListBodyElements = 12
	FreemarkerParserRULE_directiveListElseElements = 13
	FreemarkerParserRULE_directiveInclude          = 14
	FreemarkerParserRULE_directiveImport           = 15
	FreemarkerParserRULE_directiveMacro            = 16
	FreemarkerParserRULE_directiveNested           = 17
	FreemarkerParserRULE_directiveReturn           = 18
	FreemarkerParserRULE_directiveUser             = 19
	FreemarkerParserRULE_directiveUserId           = 20
	FreemarkerParserRULE_directiveUserParams       = 21
	FreemarkerParserRULE_directiveUserLoopParams   = 22
	FreemarkerParserRULE_tagExpr                   = 23
	FreemarkerParserRULE_inlineExpr                = 24
	FreemarkerParserRULE_string                    = 25
	FreemarkerParserRULE_expr                      = 26
	FreemarkerParserRULE_functionParams            = 27
	FreemarkerParserRULE_booleanRelationalOperator = 28
	FreemarkerParserRULE_struct                    = 29
	FreemarkerParserRULE_struct_pair               = 30
	FreemarkerParserRULE_single_quote_string       = 31
	FreemarkerParserRULE_double_quote_string       = 32
)

// ITemplateContext is an interface to support dynamic dispatch.
type ITemplateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Elements() IElementsContext
	EOF() antlr.TerminalNode

	// IsTemplateContext differentiates from other interfaces.
	IsTemplateContext()
}

type TemplateContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTemplateContext() *TemplateContext {
	var p = new(TemplateContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FreemarkerParserRULE_template
	return p
}

func InitEmptyTemplateContext(p *TemplateContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FreemarkerParserRULE_template
}

func (*TemplateContext) IsTemplateContext() {}

func NewTemplateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TemplateContext {
	var p = new(TemplateContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FreemarkerParserRULE_template

	return p
}

func (s *TemplateContext) GetParser() antlr.Parser { return s.parser }

func (s *TemplateContext) Elements() IElementsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IElementsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IElementsContext)
}

func (s *TemplateContext) EOF() antlr.TerminalNode {
	return s.GetToken(FreemarkerParserEOF, 0)
}

func (s *TemplateContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TemplateContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TemplateContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FreemarkerParserVisitor:
		return t.VisitTemplate(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FreemarkerParser) Template() (localctx ITemplateContext) {
	this := p
	_ = this

	localctx = NewTemplateContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, FreemarkerParserRULE_template)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(66)
		p.Elements()
	}
	{
		p.SetState(67)
		p.Match(FreemarkerParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IElementsContext is an interface to support dynamic dispatch.
type IElementsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllElement() []IElementContext
	Element(i int) IElementContext

	// IsElementsContext differentiates from other interfaces.
	IsElementsContext()
}

type ElementsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyElementsContext() *ElementsContext {
	var p = new(ElementsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FreemarkerParserRULE_elements
	return p
}

func InitEmptyElementsContext(p *ElementsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FreemarkerParserRULE_elements
}

func (*ElementsContext) IsElementsContext() {}

func NewElementsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ElementsContext {
	var p = new(ElementsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FreemarkerParserRULE_elements

	return p
}

func (s *ElementsContext) GetParser() antlr.Parser { return s.parser }

func (s *ElementsContext) AllElement() []IElementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IElementContext); ok {
			len++
		}
	}

	tst := make([]IElementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IElementContext); ok {
			tst[i] = t.(IElementContext)
			i++
		}
	}

	return tst
}

func (s *ElementsContext) Element(i int) IElementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IElementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IElementContext)
}

func (s *ElementsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ElementsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ElementsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FreemarkerParserVisitor:
		return t.VisitElements(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FreemarkerParser) Elements() (localctx IElementsContext) {
	this := p
	_ = this

	localctx = NewElementsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, FreemarkerParserRULE_elements)
	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(72)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(69)
				p.Element()
			}

		}
		p.SetState(74)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IElementContext is an interface to support dynamic dispatch.
type IElementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsElementContext differentiates from other interfaces.
	IsElementContext()
}

type ElementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyElementContext() *ElementContext {
	var p = new(ElementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FreemarkerParserRULE_element
	return p
}

func InitEmptyElementContext(p *ElementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FreemarkerParserRULE_element
}

func (*ElementContext) IsElementContext() {}

func NewElementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ElementContext {
	var p = new(ElementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FreemarkerParserRULE_element

	return p
}

func (s *ElementContext) GetParser() antlr.Parser { return s.parser }

func (s *ElementContext) CopyAll(ctx *ElementContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *ElementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ElementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type InlineExprElementContext struct {
	ElementContext
}

func NewInlineExprElementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *InlineExprElementContext {
	var p = new(InlineExprElementContext)

	InitEmptyElementContext(&p.ElementContext)
	p.parser = parser
	p.CopyAll(ctx.(*ElementContext))

	return p
}

func (s *InlineExprElementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InlineExprElementContext) INLINE_EXPR_START() antlr.TerminalNode {
	return s.GetToken(FreemarkerParserINLINE_EXPR_START, 0)
}

func (s *InlineExprElementContext) InlineExpr() IInlineExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInlineExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInlineExprContext)
}

func (s *InlineExprElementContext) EXPR_EXIT_R_BRACE() antlr.TerminalNode {
	return s.GetToken(FreemarkerParserEXPR_EXIT_R_BRACE, 0)
}

func (s *InlineExprElementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FreemarkerParserVisitor:
		return t.VisitInlineExprElement(s)

	default:
		return t.VisitChildren(s)
	}
}

type RawTextElementContext struct {
	ElementContext
}

func NewRawTextElementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *RawTextElementContext {
	var p = new(RawTextElementContext)

	InitEmptyElementContext(&p.ElementContext)
	p.parser = parser
	p.CopyAll(ctx.(*ElementContext))

	return p
}

func (s *RawTextElementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RawTextElementContext) RawText() IRawTextContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRawTextContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRawTextContext)
}

func (s *RawTextElementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FreemarkerParserVisitor:
		return t.VisitRawTextElement(s)

	default:
		return t.VisitChildren(s)
	}
}

type DirectiveElementContext struct {
	ElementContext
}

func NewDirectiveElementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *DirectiveElementContext {
	var p = new(DirectiveElementContext)

	InitEmptyElementContext(&p.ElementContext)
	p.parser = parser
	p.CopyAll(ctx.(*ElementContext))

	return p
}

func (s *DirectiveElementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DirectiveElementContext) Directive() IDirectiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDirectiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDirectiveContext)
}

func (s *DirectiveElementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FreemarkerParserVisitor:
		return t.VisitDirectiveElement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FreemarkerParser) Element() (localctx IElementContext) {
	this := p
	_ = this

	localctx = NewElementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, FreemarkerParserRULE_element)
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case FreemarkerParserCONTENT:
		localctx = NewRawTextElementContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(75)
			p.RawText()
		}

	case FreemarkerParserSTART_DIRECTIVE_TAG, FreemarkerParserSTART_USER_DIR_TAG:
		localctx = NewDirectiveElementContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(76)
			p.Directive()
		}

	case FreemarkerParserINLINE_EXPR_START:
		localctx = NewInlineExprElementContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(77)
			p.Match(FreemarkerParserINLINE_EXPR_START)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(78)
			p.InlineExpr()
		}
		{
			p.SetState(79)
			p.Match(FreemarkerParserEXPR_EXIT_R_BRACE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}
